/// home page
const HOME = "Home";
const LIBRARY = "Library";
const SEARCH_BAR_LABEL = "Search Play Books";
const TAB_EBOOKS = "Ebooks";
const TAB_AUDIO_BOOKS = "Audiobooks";
const EBOOK_FOR_YOU = "Ebooks for you";
const ON_YOUR_WISHLIST = "On your wishlist";
const OPEN_SERIES = "Open Series";
const REMOVE_DOWNLOAD = "Remove download";
const DELETE_FROM_LIBRARY = "Delete from library";
const ADD_TO_SHELF = "Add to shelf";
const REMOVE_FROM_SHELF = "Remove from shelf";
const ABOUT_THIS_EBOOK = "About this ebook";

/// library page
const YOUR_BOOKS = "Your books";
const YOUR_SHELVES = "Your shelves";
const CREATE_NEW = "Create New";
const SHELF_NAME = "Shelf Name";
const EMPTY_SHELF_NAME = "Please enter shelf name!";

/// shelf page
const RENAME_SHELF = "Rename shelf";
const DELETE_SHELF = "Delete shelf";
